--- a/index.html
+++ b/index.html
@@ -1,7 +1,34 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Andrew Greenberg</title>
+    <link rel="stylesheet" href="css/bootstrap-theme.min.css"/>
+    <link rel="stylesheet" href="css/bootstrap.css"/>
+    <link rel="stylesheet" href="css/style.css"/>
+
+    <!--[if IE]>
+        <script src="https://cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+</head>
+
 <body>
-    <h1>Hello World</h1>
-    <p>I'm hosted with Github Pages.</p>
+   <div class="navbar-static-top">
+       <div class="container">
+           <div class="navbar-brand">
+               My site
+           </div>
+       </div>
+   </div>
+    <div class="container">
+        <h1>Andrew Greenberg</h1>
+        <h2>My Site</h2>
+    </div>
     </body>
+  
+    <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="js/bootstrap.js"></script>
+</body>
 </html>
