--- a/index.html
+++ b/index.html
@@ -15,20 +15,26 @@
 </head>
 
 <body>
-   <div class="navbar-static-top">
-       <div class="container">
-           <div class="navbar-brand">
-               My site
-           </div>
+   <nav role="navigation" class="navbar navbar-default">
+       <div class="navbar-header">
+           <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
+               <span class="sr-only">Toggle navigation</span>
+               <span class="icon-bar"></span>
+               <span class="icon-bar"></span>
+               <span class="icon-bar"></span>
+           </button>
+           <a href="#" class="navbar-brand">Brand</a>
        </div>
-   </div>
-    <div class="container">
-        <h1>Andrew Greenberg</h1>
-        <h2>My Site</h2>
+    <div id="navbarCollapse" class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#">Profile</a></li>
+            <li><a href="#">Messages</a></li>
+        </ul>
+    <ul>
+        <ul class="nav navbar-nav navbar-right">
+            <li><a href="#">Login</a></li>
+        </ul>
+    </ul>
     </div>
-    </body>
-  
-    <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
-    <script src="js/bootstrap.js"></script>
-</body>
-</html>
+   </nav>
